cluster/core/monitoring/config/httproute-alertmanager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
  - name: main-gateway
    namespace: gateway
  hostnames:
  - "alertmanager.k8s.home.lab"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-alertmanager
      port: 9093
